<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.pickupticket.PickupTicketActivity"
        android:orientation="horizontal"
        android:background="@drawable/background_activity"
        android:id="@+id/clPickupTicket">

    <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/exposeller_invoice"
            android:id="@+id/ivPickupTicket"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            app:layout_constraintTop_toBottomOf="@+id/ivExpoSellerLogo4"
            android:layout_marginTop="32dp" />

    <TextView
            android:text="@string/pickup_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickupTicket"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toEndOf="@+id/ivExpoSellerLogo4"
            android:layout_marginStart="16dp" />

    <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:srcCompat="@drawable/exposeller_logo"
            android:id="@+id/ivExpoSellerLogo4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

    <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            tools:srcCompat="@color/white"
            android:id="@+id/ivQrCode"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/ivPickupTicket"
            app:layout_constraintTop_toBottomOf="@+id/tvPickupText2"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tvPickupText2"
            android:layout_marginEnd="32dp" />

    <TextView
            android:text="@string/pickup_ticket_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickupText1"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/ivPickupTicket"
            app:layout_constraintTop_toTopOf="@+id/ivPickupTicket"
            android:fontFamily="sans-serif-medium" />

    <TextView
            android:text="@string/pickup_ticket_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickupText2"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/ivPickupTicket"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPickupText1"
            android:fontFamily="sans-serif-thin" />
</androidx.constraintlayout.widget.ConstraintLayout>