<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.adminconsole.fragment.concertsmgt.ConcertsMgtFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/concert_form_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvTitleConcertForm"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/form_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvConcertName"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleConcertForm"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp" android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etConcertName"
                    app:layout_constraintStart_toEndOf="@+id/tvConcertName"
                    app:layout_constraintTop_toTopOf="@+id/tvConcertName"
                    app:layout_constraintBottom_toBottomOf="@+id/tvConcertName" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/form_economic_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvConcertTextValue"
                    app:layout_constraintTop_toBottomOf="@+id/etConcertName"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/etConcertTextValue"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/tvConcertTextValue"
                    app:layout_constraintTop_toTopOf="@+id/tvConcertTextValue"
                    app:layout_constraintBottom_toBottomOf="@+id/tvConcertTextValue" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/form_artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvArtistTextName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etConcertTextValue" android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etArtistTextName"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/tvArtistTextName"
                    app:layout_constraintTop_toTopOf="@+id/tvArtistTextName"
                    app:layout_constraintBottom_toBottomOf="@+id/tvArtistTextName" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/form_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvConciertDate"
                    app:layout_constraintTop_toBottomOf="@+id/etArtistTextName"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/etConcertDate"
                    app:layout_constraintTop_toTopOf="@+id/tvConciertDate"
                    app:layout_constraintBottom_toBottomOf="@+id/tvConciertDate" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/tvConciertDate" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/form_organization_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvOrganizationTextName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etConcertDate" android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etOrganizationTextName"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/tvOrganizationTextName"
                    app:layout_constraintTop_toTopOf="@+id/tvOrganizationTextName"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOrganizationTextName" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/form_uri_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvConcertPhotoTextUri"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etOrganizationTextName" android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>
            <ImageView
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="48dp"
                    android:layout_height="48dp" android:id="@+id/ivConcertPhotoTextUri"
                    app:layout_constraintStart_toEndOf="@+id/tvConcertPhotoTextUri"
                    android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="@+id/tvConcertPhotoTextUri"
                    app:layout_constraintBottom_toBottomOf="@+id/tvConcertPhotoTextUri"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:ems="10"
                    android:id="@+id/etConcertPhotoTextUri"
                    android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/ivConcertPhotoTextUri"
                    app:layout_constraintTop_toTopOf="@+id/ivConcertPhotoTextUri"
                    app:layout_constraintBottom_toBottomOf="@+id/ivConcertPhotoTextUri" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <Button
                    android:text="@android:string/ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnConcertFormOk"
                    app:layout_constraintTop_toBottomOf="@+id/etConcertPhotoTextUri"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/btnConcertFormCancel"
                    android:background="@color/black" android:textColor="@color/white" android:layout_marginTop="32dp"/>
            <Button
                    android:text="@android:string/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnConcertFormCancel"
                    app:layout_constraintTop_toBottomOf="@+id/etConcertPhotoTextUri"
                    app:layout_constraintStart_toEndOf="@+id/btnConcertFormOk" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" android:background="@color/black"
                    android:textColor="@color/white" android:layout_marginTop="32dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>