<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mainscreen.fragment.adminlogin.AdminLoginFragment"
        android:background="@drawable/component_background">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/system_console"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvAdminConsole"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="32dp" android:layout_marginTop="64dp" android:textColor="@color/white"/>
        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvAdminEmail"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="@+id/etAdminEmail" android:layout_marginTop="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etAdminEmail"
                app:layout_constraintTop_toTopOf="@+id/tvAdminConsole" android:layout_marginTop="64dp"
                android:textColor="@color/white" app:layout_constraintStart_toEndOf="@+id/tvAdminEmail"
                android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvAdminPassword"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="@+id/etAdminPassword"
                android:layout_marginTop="16dp" android:textColor="@color/white"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/etAdminPassword"
                android:textColor="@color/white"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btnAdminOk"
                app:layout_constraintTop_toBottomOf="@+id/etAdminEmail"
                app:layout_constraintStart_toStartOf="@+id/etAdminEmail"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
        <Button
                android:text="@android:string/ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btnAdminOk"
                android:background="@color/black" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/btnAdminCancel" android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp" android:layout_marginEnd="32dp" android:textColor="@color/white"/>
        <Button
                android:text="@android:string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btnAdminCancel"
                app:layout_constraintStart_toEndOf="@+id/btnAdminOk"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:background="@color/black"
                android:layout_marginStart="32dp" android:layout_marginBottom="32dp" android:layout_marginEnd="32dp"
                android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>