<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.adminconsole.fragment.adsmgt.AdsMgtFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/form_ads_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvAdsTitleForm"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/form_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvAdsName"
                    app:layout_constraintTop_toBottomOf="@+id/tvAdsTitleForm"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp" android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etAdsName"
                    app:layout_constraintStart_toEndOf="@+id/tvAdsName" android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAdsName"
                    app:layout_constraintTop_toTopOf="@+id/tvAdsName" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/form_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvAdsDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etAdsName" android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/etAdsDate"
                    android:focusable="false"
                    app:layout_constraintStart_toEndOf="@+id/tvAdsDate"
                    app:layout_constraintTop_toTopOf="@+id/tvAdsDate"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAdsDate" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/form_uri_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvAdsPhotoUri"
                    app:layout_constraintTop_toBottomOf="@+id/etAdsDate"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"/>
            <ImageView
                    android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="64dp"
                    android:layout_height="48dp" android:id="@+id/ivAdsPhotoUri"
                    app:layout_constraintStart_toEndOf="@+id/tvAdsPhotoUri"
                    app:layout_constraintTop_toTopOf="@+id/tvAdsPhotoUri"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAdsPhotoUri" android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:ems="10"
                    android:id="@+id/etAdsPhotoUri"
                    android:layout_marginStart="22dp" app:layout_constraintStart_toEndOf="@+id/ivAdsPhotoUri"
                    app:layout_constraintTop_toTopOf="@+id/ivAdsPhotoUri"
                    app:layout_constraintBottom_toBottomOf="@+id/ivAdsPhotoUri"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <Button
                    android:text="@android:string/ok"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content" android:id="@+id/btnAdsFormOk"
                    android:background="@color/black"
                    android:textColor="@color/text_button_foreground_color"
                    app:layout_constraintStart_toEndOf="@+id/btnAdsFormCancel"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etAdsPhotoUri"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
            <Button
                    android:text="@android:string/cancel"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content" android:id="@+id/btnAdsFormCancel"
                    android:background="@color/black"
                    android:textColor="@color/text_button_foreground_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btnAdsFormOk"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/etAdsPhotoUri"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>